--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,6 +58,8 @@
         app:layout_constraintTop_toBottomOf="@+id/email" />
 
     <EditText
+        android:paddingLeft="16dp"
+        android:hint="******"
         android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="45dp"
@@ -115,6 +117,5 @@
         app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="@+id/textView4"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
