--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -20,11 +20,13 @@
 
 
             <ImageView
+                android:id="@+id/imageView"
                 android:layout_gravity="center"
                 android:src="@drawable/img6"
                 android:layout_width="50dp"
                 android:layout_height="50dp"/>
             <TextView
+                android:id="@+id/category_name"
                 android:layout_gravity="center"
                 android:text="Cardiologist"
                 android:layout_width="wrap_content"
