--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,6 +33,7 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView"
+
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:orientation="horizontal"
@@ -57,6 +58,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_margin="8dp"
+            android:id="@+id/doc_recycler"
            tools:listitem="@layout/item_doctors"
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
