--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -90,7 +90,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
             <Button
-                android:id="@+id/login"
+                android:id="@+id/create"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:layout_marginStart="32dp"
@@ -109,13 +109,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="Already have an account ?"
-                app:layout_constraintEnd_toEndOf="@+id/login"
-                app:layout_constraintStart_toStartOf="@+id/login"
-                app:layout_constraintTop_toBottomOf="@+id/login" />
+                app:layout_constraintEnd_toEndOf="@+id/create"
+                app:layout_constraintStart_toStartOf="@+id/create"
+                app:layout_constraintTop_toBottomOf="@+id/create" />
 
 
             <TextView
-                android:id="@+id/create_acc"
+                android:id="@+id/login"
                 android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_marginTop="12dp"
