--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -3,6 +3,7 @@
     android:layout_width="150dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="10dp"
+    android:layout_marginBottom="5dp"
     android:layout_height="130dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
