--- a/app/src/main/res/layout/item_doctors.xml
+++ b/app/src/main/res/layout/item_doctors.xml
@@ -7,7 +7,7 @@
     android:layout_marginRight="6dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="10dp"
-    android:layout_height="120dp">
+    android:layout_height="110dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -16,8 +16,8 @@
 
 
         <ImageView
-            android:id="@+id/image"
-            android:layout_width="wrap_content"
+            android:id="@+id/avater"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +32,7 @@
             android:layout_marginTop="16dp"
             android:text="name"
             android:textColor="@color/black"
-            app:layout_constraintStart_toEndOf="@+id/image"
+            app:layout_constraintStart_toEndOf="@+id/avater"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -43,7 +43,7 @@
             android:layout_marginTop="8dp"
             android:text="category"
             android:textColor="@color/black"
-            app:layout_constraintStart_toEndOf="@+id/image"
+            app:layout_constraintStart_toEndOf="@+id/avater"
             app:layout_constraintTop_toBottomOf="@+id/name" />
 
         <TextView
@@ -54,7 +54,7 @@
             android:layout_marginTop="8dp"
             android:text="0 BDT"
             android:textSize="16sp"
-            app:layout_constraintStart_toEndOf="@+id/image"
+            app:layout_constraintStart_toEndOf="@+id/avater"
             app:layout_constraintTop_toBottomOf="@+id/category" />
 
         <TextView
