added some modification by tanveer

--- a/app/src/main/res/layout/activity_appoinment.xml
+++ b/app/src/main/res/layout/activity_appoinment.xml
@@ -207,7 +207,7 @@
                 android:background="@drawable/img_2"
                 android:ems="10"
                 android:hint="Write your problem in short"
-                android:inputType="number"
+                android:inputType="textPersonName"
                 android:paddingLeft="16dp"/>
 
         </LinearLayout>
