--- a/app/src/main/res/layout/activity_doctor_login.xml
+++ b/app/src/main/res/layout/activity_doctor_login.xml
@@ -75,7 +75,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
         <Button
-            android:id="@+id/create"
+            android:id="@+id/login"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginStart="32dp"
