--- a/app/src/main/res/layout/activity_my_medicine.xml
+++ b/app/src/main/res/layout/activity_my_medicine.xml
@@ -9,6 +9,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         app:spanCount="2"
+        android:id="@+id/recyclerView"
         tools:itemCount="5"
         tools:listitem="@layout/item_medicine"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
