--- a/app/src/main/res/layout/activity_my_medicine.xml
+++ b/app/src/main/res/layout/activity_my_medicine.xml
@@ -7,6 +7,15 @@
     tools:context=".MyMedicineActivity">
 
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         app:spanCount="2"
         android:id="@+id/recyclerView"
