--- a/app/src/main/res/layout/item_appointment.xml
+++ b/app/src/main/res/layout/item_appointment.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="4dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_height="120dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:textSize="14sp"
@@ -85,4 +85,15 @@
         android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/complain"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="16dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/doctor"
+        app:layout_constraintTop_toBottomOf="@+id/doctor" />
 </androidx.constraintlayout.widget.ConstraintLayout>
