added some modification by tanveer

--- a/app/src/main/res/layout/item_medicine.xml
+++ b/app/src/main/res/layout/item_medicine.xml
@@ -19,7 +19,7 @@
 
     <TextView
         android:textColor="@android:color/black"
-        android:id="@+id/textView20"
+        android:id="@+id/medName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
