added some modification by tanveer

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -44,6 +44,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+        android:id="@+id/recyclerView"
         tools:listitem="@layout/item_doctors"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
