added some modification by tanveer

--- a/app/src/main/res/layout/activity_appoinment.xml
+++ b/app/src/main/res/layout/activity_appoinment.xml
@@ -198,6 +198,7 @@
                 android:paddingLeft="16dp"/>
 
             <EditText
+                android:layout_marginBottom="100dp"
                 android:id="@+id/complain"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
