--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -104,6 +104,7 @@
 
             <RadioGroup
 
+                android:visibility="gone"
                 android:id="@+id/radioGroup"
                 android:layout_width="match_parent"
                 android:layout_height="45dp"
@@ -137,33 +138,6 @@
             </RadioGroup>
 
             <TextView
-                android:id="@+id/textView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="24dp"
-                android:text="Age"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
-
-            <EditText
-                android:id="@+id/age"
-                android:layout_width="100dp"
-                android:layout_height="45dp"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/img_2"
-                android:ems="10"
-                android:hint="00"
-                android:inputType="number"
-                android:maxLength="2"
-                android:paddingLeft="16sp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView6"
-                app:layout_constraintStart_toEndOf="@+id/textView6"
-                app:layout_constraintTop_toTopOf="@+id/textView6" />
-
-            <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -176,20 +150,20 @@
                 app:layout_constraintTop_toTopOf="@+id/phone" />
 
             <EditText
-                android:paddingLeft="16sp"
                 android:id="@+id/phone"
                 android:layout_width="190dp"
                 android:layout_height="45dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="32dp"
                 android:background="@drawable/img_2"
                 android:ems="10"
                 android:hint="01"
 
                 android:inputType="number"
                 android:maxLength="11"
+                android:paddingLeft="16sp"
                 app:layout_constraintStart_toEndOf="@+id/textView7"
-                app:layout_constraintTop_toBottomOf="@+id/age" />
+                app:layout_constraintTop_toBottomOf="@+id/name" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
