--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toBottomOf="@+id/phone" />
 
     <TextView
-        android:visibility="gone"
+        android:visibility="visible"
         android:id="@+id/updateProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
