--- a/app/src/main/res/layout/item_appointment.xml
+++ b/app/src/main/res/layout/item_appointment.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="4dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:layout_height="wrap_content">
+    android:layout_height="170dp">
 
     <TextView
         android:textSize="14sp"
@@ -54,15 +54,15 @@
         app:layout_constraintTop_toTopOf="@+id/weight" />
 
     <TextView
-        android:textSize="14sp"
-        android:textColor="@android:color/black"
         android:id="@+id/date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
-        app:layout_constraintStart_toEndOf="@+id/blood"
-        app:layout_constraintTop_toTopOf="@+id/blood" />
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@+id/complain"
+        app:layout_constraintTop_toBottomOf="@+id/complain" />
 
     <TextView
         android:textSize="14sp"
@@ -87,14 +87,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textColor="@android:color/black"
         android:id="@+id/complain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginBottom="16dp"
         android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="@+id/doctor"
         app:layout_constraintTop_toBottomOf="@+id/doctor" />
 
