--- a/app/src/main/res/layout/activity_appoinment.xml
+++ b/app/src/main/res/layout/activity_appoinment.xml
@@ -102,7 +102,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="190dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -198,7 +198,7 @@
                 android:paddingLeft="16dp"/>
 
             <EditText
-                android:layout_marginBottom="100dp"
+                android:layout_marginBottom="40dp"
                 android:id="@+id/complain"
                 android:layout_width="match_parent"
                 android:layout_height="100dp"
@@ -211,22 +211,28 @@
                 android:inputType="textPersonName"
                 android:paddingLeft="16dp"/>
 
+
+            <Button
+
+                android:id="@+id/confirm"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="80dp"
+                android:background="@drawable/img_4"
+                android:text="Confirm Appointment"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+
+
         </LinearLayout>
 
     </ScrollView>
 
-    <Button
-        android:id="@+id/confirm"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:background="@drawable/img_4"
-        android:text="Confirm Appointment"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
