--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -27,10 +27,14 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"/>
             <TextView
+                android:layout_marginTop="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:gravity="center"
                 android:id="@+id/category_name"
                 android:layout_gravity="center"
                 android:text="Cardiologist"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
         </LinearLayout>
