added some modification by tanveer

--- a/app/src/main/res/layout/activity_doctor_datiles.xml
+++ b/app/src/main/res/layout/activity_doctor_datiles.xml
@@ -215,5 +215,30 @@ available for private consultation."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:textColor="@color/purple_200"
+       android:gravity="center"
+        android:drawableLeft="@drawable/ic_mail"
+        android:id="@+id/email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/time"
+        app:layout_constraintTop_toBottomOf="@+id/time" />
+
+    <TextView
+
+        android:textColor="@color/purple_200"
+        android:gravity="center"
+        android:drawableLeft="@drawable/ic_phone"
+        android:id="@+id/phone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="@+id/email"
+        app:layout_constraintTop_toBottomOf="@+id/email" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
