--- a/app/src/main/res/layout/activity_doctor_home.xml
+++ b/app/src/main/res/layout/activity_doctor_home.xml
@@ -58,6 +58,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:background="@color/purple_200"
         android:id="@+id/recyclerView"
         tools:listitem="@layout/item_appointment"
         android:layout_width="match_parent"
