--- a/app/src/main/res/layout/write_prescription.xml
+++ b/app/src/main/res/layout/write_prescription.xml
@@ -8,31 +8,30 @@
 
     <TextView
 
-        android:fontFamily="monospace"
-        android:textSize="16sp"
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="monospace"
         android:text="Prescription"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
 
-        android:textColor="@color/black"
         android:id="@+id/et_prescription"
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
         android:ems="10"
         android:hint="Type Medicine "
         android:inputType="textPersonName"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +40,6 @@
 
     <EditText
 
-        android:textColor="@color/black"
         android:id="@+id/food"
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -51,9 +49,11 @@
         android:ems="10"
         android:hint="Suggest and Avoid Food "
         android:inputType="textPersonName"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/et_prescription" />
+        app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
     <Button
         android:layout_marginBottom="20dp"
@@ -70,4 +70,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/food"
         app:layout_constraintVertical_bias="0.046" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="monospace"
+        android:text="Suggest and Avoid Food"
+        android:textColor="@android:color/black"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/et_prescription" />
 </androidx.constraintlayout.widget.ConstraintLayout>
