added some modification by tanveer

--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -6,15 +6,15 @@
     android:layout_height="125dp">
 
     <TextView
-        android:textColor="@android:color/black"
         android:id="@+id/tt_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="TextView"
+        android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/type" />
 
     <TextView
         android:textColor="@android:color/black"
@@ -25,4 +25,14 @@
         android:text="TextView"
         app:layout_constraintStart_toStartOf="@+id/tt_text"
         app:layout_constraintTop_toBottomOf="@+id/tt_text" />
+
+    <TextView
+        android:id="@+id/type"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
