--- a/app/src/main/res/layout/write_prescription.xml
+++ b/app/src/main/res/layout/write_prescription.xml
@@ -32,15 +32,16 @@
                 app:layout_constraintTop_toBottomOf="@+id/date" />
 
             <EditText
-                android:maxLength="400"
-                android:inputType="textMultiLine"
                 android:id="@+id/et_prescription"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginEnd="24dp"
                 android:ems="10"
                 android:hint="Type Medicine "
+                android:inputType="textMultiLine"
+                android:maxLength="400"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
@@ -49,15 +50,16 @@
 
 
             <EditText
-                android:maxLength="400"
-                android:inputType="textMultiLine"
                 android:id="@+id/food"
                 android:layout_width="match_parent"
-                android:layout_height="100dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
                 android:ems="10"
                 android:hint="Suggest and Avoid Food "
+                android:inputType="textMultiLine"
+                android:maxLength="400"
                 android:textColor="@color/black"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -65,13 +67,13 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView22" />
 
             <Button
-                android:layout_marginBottom="20dp"
                 android:id="@+id/submit"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="20dp"
                 android:text="Submit"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="32dp"
                 android:fontFamily="monospace"
                 android:text="Suggest and Avoid Food"
                 android:textColor="@android:color/black"
